@@ -1,3 +1,7 @@
+************* THIS IS DEVELOPMENT BRANCH OF GNUK       *************
+************* Text written below is for release 1.0.2, *************
+************* which might not be vaild for this code   *************
+
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
 							  Version 1.0.2
