@@ -1,4 +1,5 @@
 void random_init (void);
+void random_fini (void);
 
 /* 32-byte random bytes */
 const uint8_t *random_bytes_get (void);
